--- a/style.css
+++ b/style.css
@@ -45,7 +45,11 @@
             background-color: #f5f5f5;
             font-weight: 600;
             color: #555;
-            width: 50%;
+        }
+
+        th:first-child {
+            width: 50px;
+            text-align: center;
         }
 
         tr:hover {
@@ -66,4 +70,11 @@
         .device-tag.tablet {
             background: #e8f5e9;
             color: #1b5e20;
+        }
+
+        .stats-bar {
+            margin-bottom: 10px;
+            text-align: right;
+            font-size: 0.9em;
+            color: #666;
         }
